# Day1

./: .gitignore  DSE200_Python_Tutorial.ipynb  ETL_Data_Pipeline.ipynb  Markdown_Cheatsheet.ipynb  Numpy Introduction Tutorial.ipynb  Numpy_Exercises.ipynb  OopPython.ipynb  Pandas.ipynb  README.md  SQLite_Indexing_Performance_Demo.ipynb  pyproject.toml  python_basic.ipynb  temperatures.parquet  temperatures.sqlite  temperatures.xlsx
