[project]
name = "dse200-day1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask[dataframe]>=2025.9.1",
    "faker>=37.8.0",
    "fastexcel>=0.16.0",
    "ipykernel>=6.30.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.7.0",
    "memory-profiler>=0.60.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "psutil>=5.9.0",
    "pyarrow>=21.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlite-utils>=3.38",
]
